--- a/src/app/components/basic-grid-view/basic-grid-view.component.html
+++ b/src/app/components/basic-grid-view/basic-grid-view.component.html
@@ -2,6 +2,8 @@
   [dataSource]="gridData"
   [screenInfo]="screens"
   [editable]="true"
+  [templates]="templates"
+  [editTemplates]="editTemplates"
 ></my-grid>
 
 <ng-template #testTemplate let-dataItem="dataItem" let-field="field">
