--- a/src/app/components/basic-grid-view/basic-grid-view.component.html
+++ b/src/app/components/basic-grid-view/basic-grid-view.component.html
@@ -4,6 +4,7 @@
   [editable]="true"
   [templates]="templates"
   [editTemplates]="editTemplates"
+  [allowPaging]="false"
 ></my-grid>
 
 <ng-template #testTemplate let-dataItem="dataItem" let-field="field">
