--- a/src/app/components/group-grid-view/group-grid-view.component.html
+++ b/src/app/components/group-grid-view/group-grid-view.component.html
@@ -1,1 +1,5 @@
-<my-grid [dataSource]="gridData" [screenInfo]="screens"></my-grid>
+<my-grid
+  [dataSource]="gridData"
+  [screenInfo]="screens"
+  [allowPaging]="false"
+></my-grid>
