--- a/src/app/components/grid-control/grid-control.component.html
+++ b/src/app/components/grid-control/grid-control.component.html
@@ -7,6 +7,14 @@
   [pageSize]="myPageSize"
   (pageChange)="pageChangedHandler($event)"
 >
+  <ng-template kendoGridToolbarTemplate>
+    <button type="button" icon="file-excel">Add</button>
+    <button type="button" icon="file-excel">Delete</button>
+    <button type="button" icon="file-excel">Edit</button>
+    <kendo-grid-spacer></kendo-grid-spacer>
+    <button type="button" icon="file-excel">Export to Excel</button>
+    <button icon="file-pdf">Export to PDF</button>
+  </ng-template>
   <kendo-grid-column
     *ngFor="let screen of screenInfo"
     [field]="screen.name"
