--- a/src/app/components/grid-control/grid-control.component.html
+++ b/src/app/components/grid-control/grid-control.component.html
@@ -7,13 +7,62 @@
   [pageSize]="myPageSize"
   (pageChange)="pageChangedHandler($event)"
 >
-  <ng-template kendoGridToolbarTemplate>
-    <button type="button" icon="file-excel">Add</button>
-    <button type="button" icon="file-excel">Delete</button>
-    <button type="button" icon="file-excel">Edit</button>
+  <ng-template
+    kendoGridToolbarTemplate
+    *ngIf="
+      showAddButton ||
+      showDeleteButton ||
+      showEditButton ||
+      showExportButton ||
+      showImportButton
+    "
+  >
+    <button
+      kendoButton
+      icon="plus"
+      title="Add"
+      (click)="clickAddHandler()"
+      *ngIf="showAddButton"
+    >
+      Add
+    </button>
+    <button
+      kendoButton
+      icon="trash"
+      title="Delete"
+      (click)="clickDeleteHandler()"
+      *ngIf="showDeleteButton"
+    >
+      Delete
+    </button>
+    <button
+      kendoButton
+      icon="edit"
+      title="Edit"
+      (click)="clickEditHandler()"
+      *ngIf="showEditButton"
+    >
+      Edit
+    </button>
     <kendo-grid-spacer></kendo-grid-spacer>
-    <button type="button" icon="file-excel">Export to Excel</button>
-    <button icon="file-pdf">Export to PDF</button>
+    <button
+      kendoButton
+      icon="download"
+      title="Export"
+      *ngIf="showExportButton"
+      (click)="clickExportHandler()"
+    >
+      Export
+    </button>
+    <button
+      kendoButton
+      icon="upload"
+      title="Import"
+      *ngIf="showImportButton"
+      (click)="clickImportHandler()"
+    >
+      Import
+    </button>
   </ng-template>
   <kendo-grid-column
     *ngFor="let screen of screenInfo"
